--- a/Servers/CereberusGameServer/Assembly-CSharp.csproj
+++ b/Servers/CereberusGameServer/Assembly-CSharp.csproj
@@ -59,7 +59,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\NetworkManager.cs" />
+    <Compile Include="Assets\Scripts\Enums.cs" />
+    <Compile Include="Assets\Scripts\NetworkReceive.cs" />
+    <Compile Include="Assets\Scripts\NetworkSend.cs" />
+    <Compile Include="Assets\Scripts\Player.cs" />
+    <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\Packets.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\PolygonBattleRoyale\Shader\DamageZone.shader" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
